--- a/Views/Dennys/VerReseñas.cshtml
+++ b/Views/Dennys/VerReseñas.cshtml
@@ -1,3 +1,7 @@
+@{
+  int indice = 0;
+}
+
  <header>
       <nav>
         <div class="navbar navegador ">
@@ -44,6 +48,7 @@
         {
             <div class="card-reseña">
                 <div class="dentro-reseñas">
+                    <p>@ViewBag.InfoReseñas[indice].Nombre</p>
                     <p>@item.Comentario</p>
                     @for (int i = 1; i <= item.Valoracion; i++)
                     {
@@ -51,6 +56,7 @@
                     }
                 </div>
             </div>
+            indice = indice + 1;
         }
     </div>
 </main>
